[package]
name = "rubit-cli"
version = "0.2.0"
edition = "2021"
description = "The rubit Bittorrent client cli binary"
license-file = "LICENSE.txt"

[dependencies]
rubit = { path = "../rubit", version = "0.1.0" }
rubit-bencode = { path = "../rubit-bencode", version = "0.1.0" }
url = "2.5.2"
sha1 = "0.10.6"
indicatif = "0.17.8"
rand = "0.8.5"
clap = { version = "4.5.16", features = ["derive"] }
